Información Basica Subida

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["pdfs", "uuidv"]
+  "cSpell.words": [
+    "Aguadita",
+    "Hidelfonso",
+    "Ospina",
+    "pdfs",
+    "Tolima",
+    "uuidv",
+    "Veredal"
+  ]
 }
