--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
