--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.12.1",
+  "packageManager": "pnpm@10.12.2",
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
     "bcryptjs": "^3.0.2",
@@ -24,6 +24,7 @@
     "file-type": "^21.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
+    "resend": "^4.6.0",
     "sanitize-filename": "^1.6.3",
     "uuid": "^11.1.0"
   }
